fix gap on mobile

--- a/src/sass/_floor-plans.scss
+++ b/src/sass/_floor-plans.scss
@@ -10,6 +10,10 @@
   background: var(--grey);
   transition: all 0.25s;
 
+  @media screen and (max-width: 900px) {
+    gap: 0 !important;
+  }
+
   &:hover {
     background: var(--green);
     cursor: pointer;
